tests/snapshots/cmd_generate_context__expr_can_interpolate_multiple_context_values.snap
---
source: tests/cmd_generate_context.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_ci.yaml
    Finished generated 1 workflow in [TIME]
--- .github/ghat/workflows/ci.ts ---
workflow("CI", {
  on: triggers({ push: ["main"] }),
  jobs(ctx) {
    const build = ctx.job("Build", {
      runs_on: "ubuntu-latest",
      steps() {
        return { changed: "true" }
      }
    })

    ctx.job("Deploy", {
      runs_on: "ubuntu-latest",
      needs: [build],
      if: (ctx) => expr`${ctx.github.ref} == 'refs/heads/main' && ${ctx.needs.build.outputs.changed} == 'true'`,
      steps() { run("echo deploy") }
    })
  }
})
--- .github/workflows/generated_ci.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: CI
on:
  push:
    branches:
    - main
jobs:
  build:
    name: Build
    runs-on: ubuntu-latest
    outputs:
      changed: 'true'
  deploy:
    name: Deploy
    runs-on: ubuntu-latest
    needs:
    - build
    if: ${{ github.ref == 'refs/heads/main' && needs.build.outputs.changed == 'true' }}
    steps:
    - id: step_0
      run: echo deploy
