tests/snapshots/cmd_generate_context__job_if_rejects_matrix.snap
---
source: tests/cmd_generate_context.rs
expression: output
---
exit_code: 1
---stderr---
  Evaluating workflow definitions
Error: 
  x context 'matrix' is not available in 'Test > if' (available: github,
  | needs, vars, inputs)
  | 
  | Stack trace:
  |     at get (eval_script:43:96)
  |     at if (.github/ghat/workflows/bad.ts:6:1)
  |     at resolve_value (eval_script:63:41)
  |     at map_job (eval_script:333:33)
  |     at <anonymous> (eval_script:465:24)
  |     at jobs (.github/ghat/workflows/bad.ts:4:9)
  |     at workflow (eval_script:503:39)
  |     at <anonymous> (.github/ghat/workflows/bad.ts:2:7)
  |
