tests/snapshots/cmd_generate_context__job_strategy_rejects_secrets.snap
---
source: tests/cmd_generate_context.rs
expression: output
---
exit_code: 1
---stderr---
  Evaluating workflow definitions
Error: 
  x context 'secrets' is not available in 'strategy' (available: github, needs, vars, inputs)
  | 
  | Stack trace:
  |     at get (eval_script:44:96)
  |     at strategy (.github/ghat/workflows/bad.ts:6:23)
  |     at resolve_value (eval_script:64:41)
  |     at map_job (eval_script:319:30)
  |     at <anonymous> (eval_script:467:24)
  |     at jobs (.github/ghat/workflows/bad.ts:4:7)
  |     at workflow (eval_script:505:39)
  |     at <anonymous> (.github/ghat/workflows/bad.ts:2:6)
  |
