tests/snapshots/cmd_generate_context__merged_event_context_allows_multi_trigger_access_without_narrowing.snap
---
source: tests/cmd_generate_context.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_mixed.yaml
    Finished generated 1 workflow in [TIME]
--- .github/ghat/workflows/mixed.ts ---
workflow("Mixed", {
  on: triggers({
    pull_request: { types: ["opened"] },
    issue_comment: { types: ["created"] },
  }),
  jobs(ctx) {
    ctx.job("Check", {
      runs_on: "ubuntu-latest",
      if: (ctx) => expr`${ctx.github.event.pull_request.head.ref} != '' && ${ctx.github.event.comment.body} != ''`,
      steps(ctx) {
        run("echo mixed", {
          env: {
            PR_REF: `${ctx.github.event.pull_request.head.ref}`,
            COMMENT_BODY: `${ctx.github.event.comment.body}`,
          },
        })
      }
    })
  }
})
--- .github/workflows/generated_mixed.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: Mixed
on:
  pull_request:
    types:
    - opened
  issue_comment:
    types:
    - created
jobs:
  check:
    name: Check
    runs-on: ubuntu-latest
    if: ${{ github.event.pull_request.head.ref != '' && github.event.comment.body != '' }}
    steps:
    - id: step_0
      run: echo mixed
      env:
        PR_REF: ${{ github.event.pull_request.head.ref }}
        COMMENT_BODY: ${{ github.event.comment.body }}
