tests/snapshots/cmd_generate_context__pull_request_event_fields_work_without_narrowing.snap
---
source: tests/cmd_generate_context.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_pr.yaml
    Finished generated 1 workflow in [TIME]
--- .github/ghat/workflows/pr.ts ---
workflow("PR", {
  on: triggers({
    pull_request: { types: ["opened", "synchronize"] }
  }),
  jobs(ctx) {
    ctx.job("Check", {
      runs_on: "ubuntu-latest",
      if: (ctx) => expr`${ctx.github.event.pull_request.head.ref} == 'main'`,
      steps(ctx) {
        run("echo checking", {
          env: {
            PR_REF: `${ctx.github.event.pull_request.head.ref}`,
            PR_NUMBER: `${ctx.github.event.pull_request.number}`,
          },
        })
      }
    })
  }
})
--- .github/workflows/generated_pr.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: PR
on:
  pull_request:
    types:
    - opened
    - synchronize
jobs:
  check:
    name: Check
    runs-on: ubuntu-latest
    if: ${{ github.event.pull_request.head.ref == 'main' }}
    steps:
    - id: step_0
      run: echo checking
      env:
        PR_REF: ${{ github.event.pull_request.head.ref }}
        PR_NUMBER: ${{ github.event.pull_request.number }}
