tests/snapshots/cmd_generate_context__pull_request_target_uses_pull_request_payload_shape.snap
---
source: tests/cmd_generate_context.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_pr_target.yaml
    Finished generated 1 workflow in [TIME]
--- .github/ghat/workflows/pr_target.ts ---
workflow("PR Target", {
  on: triggers({
    pull_request_target: { types: ["opened"] }
  }),
  jobs(ctx) {
    ctx.job("Check", {
      runs_on: "ubuntu-latest",
      if: (ctx) => expr`${ctx.github.event.pull_request.head.ref} != ''`,
      steps(ctx) {
        run("echo target", {
          env: {
            HEAD_REF: `${ctx.github.event.pull_request.head.ref}`,
            BASE_REF: `${ctx.github.event.pull_request.base.ref}`,
          },
        })
      }
    })
  }
})
--- .github/workflows/generated_pr_target.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: PR Target
on:
  pull_request_target:
    types:
    - opened
jobs:
  check:
    name: Check
    runs-on: ubuntu-latest
    if: ${{ github.event.pull_request.head.ref != '' }}
    steps:
    - id: step_0
      run: echo target
      env:
        HEAD_REF: ${{ github.event.pull_request.head.ref }}
        BASE_REF: ${{ github.event.pull_request.base.ref }}
