tests/snapshots/cmd_generate_context__steps_can_use_all_contexts.snap
---
source: tests/cmd_generate_context.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_ci.yaml
    Finished generated 1 workflow in [TIME]
--- .github/ghat/workflows/ci.ts ---
workflow("CI", {
  on: triggers({ push: ["main"] }),
  jobs(ctx) {
    ctx.job("Test", {
      runs_on: "ubuntu-latest",
      strategy: matrix({ os: ["ubuntu-latest"] }),
      steps(ctx) {
        run(`github=${ctx.github.sha}`)
        run(`runner=${ctx.runner.os}`)
        run(`env=${ctx.env.PATH}`)
        run(`vars=${ctx.vars.MY_VAR}`)
        run(`secrets=${ctx.secrets.TOKEN}`)
        run(`matrix=${ctx.matrix.os}`)
        run(`job=${ctx.job.status}`)
        run(`strategy=${ctx.strategy.fail_fast}`)
      }
    })
  }
})
--- .github/workflows/generated_ci.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: CI
on:
  push:
    branches:
    - main
jobs:
  test:
    name: Test
    runs-on: ubuntu-latest
    strategy:
      matrix:
        os:
        - ubuntu-latest
    steps:
    - id: step_0
      run: github=${{ github.sha }}
    - id: step_1
      run: runner=${{ runner.os }}
    - id: step_2
      run: env=${{ env.PATH }}
    - id: step_3
      run: vars=${{ vars.MY_VAR }}
    - id: step_4
      run: secrets=${{ secrets.TOKEN }}
    - id: step_5
      run: matrix=${{ matrix.os }}
    - id: step_6
      run: job=${{ job.status }}
    - id: step_7
      run: strategy=${{ strategy.fail_fast }}
