tests/snapshots/cmd_generate_context__workflow_env_can_use_secrets.snap
---
source: tests/cmd_generate_context.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_ci.yaml
    Finished generated 1 workflow in [TIME]
--- .github/ghat/workflows/ci.ts ---
workflow("CI", {
  on: triggers({ push: ["main"] }),
  env: (ctx) => ({
    TOKEN: `${ctx.secrets.GITHUB_TOKEN}`,
    REPO: `${ctx.github.repository}`,
  }),
  jobs(ctx) {
    ctx.job("Build", {
      runs_on: "ubuntu-latest",
      steps() { run("echo hello") }
    })
  }
})
--- .github/workflows/generated_ci.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: CI
on:
  push:
    branches:
    - main
env:
  TOKEN: ${{ secrets.GITHUB_TOKEN }}
  REPO: ${{ github.repository }}
jobs:
  build:
    name: Build
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      run: echo hello
